-*- text -*-
* Experimental support in GAS to synthesize CFI for ABI-conformant,
  hand-written asm using the new command line option --scfi=experimental on
  x86-64.  Only System V AMD64 ABI is supported.

* Add support for the AArch64 Scalable Matrix Extension version 2.1 (SME2.1)
  instructions.

* Add support for 'armv8.9-a' and 'armv9.4-a' for -march in Arm GAS.

* Initial support for Intel APX: 32 GPRs, NDD, PUSH2/POP2 and PUSHP/POPP.

* On RISC-V macro instructions expanding to AUIPC and a load, store, or branch
  no longer accept x0 as an intermediate and/or destination register.

* Add support for Reliability, Availability and Serviceability extension v2
  (RASv2) for AArch64.

* Add support for 128-bit Atomic Instructions (LSE128) for AArch64.

* Add support for Guarded Control Stack (GCS) for AArch64.

* Add support for AArch64 Check Feature Status Extension (CHK).

* Add support for 'armv8.9-a' and 'armv9.4-a' for -march in AArch64 GAS.

* Add support for Intel USER_MSR instructions.

* Add support for Intel AVX10.1.

* Add support for Intel PBNDKB instructions.

* Add support for Intel SM4 instructions.

* Add support for Intel SM3 instructions.

* Add support for Intel SHA512 instructions.

* Add support for Intel AVX-VNNI-INT16 instructions.

* Add support for Cortex-A520 for AArch64.

* Add support for Cortex-A720 for AArch64.

* Add support for Cortex-X3 for AArch64.

* Add support for Cortex-X4 for AArch64.

* Add support for RISC-V T-Head extensions (XTheadVector, XTheadZvlsseg
  and XTheadZvamo) from version 2.3.0 of the T-Head ISA manual.

* Add support for RISC-V CORE-V extensions (XCVmac, XCValu) with version 1.0.

* Add support for RISC-V SiFive VCIX extension (XSfVcp) with version 1.0.

* The BPF assembler now uses semi-colon (;) to separate statements, and
  therefore they cannot longer be used to begin line comments. This matches the
  behavior of the clang/LLVM BPF assembler.
